--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,8 +26,52 @@
 
 .App-link {
   color: #61dafb;
+} */
+
+.MuiInputBase-input {
+  font-size: 1.4vw !important;
+  color: white !important;
 }
 
+.MuiInputLabel-formControl {
+  font-size: 1.4vw !important;
+  color: white !important;
+}
+
+.MuiFormHelperText-root {
+  font-size: 1vw !important;
+  color: white !important;
+}
+
+.MuiSelect-select.MuiSelect-select {
+  padding-right: 1vw !important;
+  text-align: left !important;
+}
+.Mui-focused {
+  color: #ceb180 !important;
+}
+.MuiInput-underline:after {
+  border-bottom: 2px solid #ceb180 !important;
+  border-bottom-color: #ceb180 !important;
+}
+.Mui-error.MuiInput-underline:after {
+  border-bottom: 2px solid #f4132c !important;
+  border-bottom-color: #f4132c !important;
+}
+.MuiInput-underline::before {
+  /* border-bottom: white !important; */
+  border-bottom-color: white !important;
+}
+
+.MuiButton-outlined {
+  border: 1px solid white !important;
+  padding: 0.8vw 3vw !important;
+}
+
+.MuiButton-label {
+  color: white;
+  font-size: 1.2vw;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
